syntax = "proto3";

package monitor_service;

option optimize_for = SPEED;

message StackTraceRequest {}

message StackTraceResponse {
  map<uint32, string> actor_traces = 1;
  map<string, string> rpc_traces = 2;
}

service MonitorService {
  rpc StackTrace(StackTraceRequest) returns (StackTraceResponse);
}
